--- a/homepage-main.css
+++ b/homepage-main.css
@@ -15,7 +15,6 @@ a:visited {
 }
 
 .container {
-  max-width: 1170px;
   padding: 0 0px;
   width: 100%;
   -webkit-box-sizing: border-box;
@@ -68,7 +67,6 @@ header {
 }
 
 main {
-  max-width: 1170px;
   width: 100%;
 }
 
@@ -98,11 +96,11 @@ main {
   text-align: center;
   font-size: 12px;
   margin: 0;
-  padding: 40px 0 0 0;
+  padding: 60px 0 0 0;
 }
 
 #massage-wrapper li{
-  padding: 0 0 20 0;
+  padding: 0 0 40 0;
   font-family:'Gulim';
   list-style: none;
 }
@@ -186,7 +184,6 @@ main {
 }
 
 #projects {
-  max-width: 1170px;
   width: 100%;
 }
 
@@ -205,7 +202,7 @@ main {
 
 .project-image {
   float: left;
-  width: 20%;
+  width: 200px;
   object-fit: cover;
 }
 
@@ -223,7 +220,6 @@ opacity: 1;
 }
 
 .image img {
-  display: block;
   height: 100%;
   object-fit: cover;
   width: 100%;
@@ -242,7 +238,7 @@ opacity: 1;
     justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .image-text:hover{
