--- a/homepage-main.css
+++ b/homepage-main.css
@@ -220,9 +220,9 @@ opacity: 1;
 }
 
 .image img {
-  height: 100%;
+  height: 190px;
   object-fit: cover;
-  width: 100%;
+  width: 190px;
   overflow: hidden;
 }
 
