--- a/homepage-main.css
+++ b/homepage-main.css
@@ -250,9 +250,9 @@ transition: all 2s ease;
 .image-text {
   opacity: 0;
   top: 0;
-  width: 100%;
+  width: 190px;
   position: absolute;
-  height: 100%;
+  height: 190px;
   background: rgba(0,0,0,0.3);
 }
 
