--- a/responsive.css
+++ b/responsive.css
@@ -69,6 +69,7 @@
   .profile-n-container {
     text-align: left;
     display: inline-block;
+    padding-left: 10px;
   }
 
   .profile-t-container {
@@ -161,6 +162,30 @@
     text-align: center;
     font-size: 15px;
   }
+
+
+.project_info h1{
+  font-size: 14px;
+}
+
+.project_body{
+  font-size: 10px;
+}
+
+
+.project_images{
+  text-align: center;
+  float: none;
+  padding: 0 0;
+}
+
+
+.project_image img{
+  text-align: center;
+  float: none;
+}
+
+
 
   #footer-icon li {
     margin:0 5px;
