--- a/responsive.css
+++ b/responsive.css
@@ -4,7 +4,7 @@
   #header-center {
     float: left;
     width: 100px;
-    padding: 0 0 0 50px;
+    padding: 0 0 0 25px;
   }
 
 
@@ -31,7 +31,7 @@
   #header-center {
     float: left;
     width: 100px;
-    padding: 0 0 0 50px;
+    padding: 0 0 0 25px;
   }
 
 
@@ -40,6 +40,18 @@
     font-size: 8px;
     font-family: "M+ 1c" ;
     padding: 0 20px;
+  }
+  
+  .profile {
+    padding: 0;
+  }
+  
+  .projects {
+    padding: 0;
+  }
+  
+  .contact {
+    padding: 0;
   }
 
   #massage-wrapper ul {
@@ -183,6 +195,8 @@
 .project_image img{
   text-align: center;
   float: none;
+  width:100%;
+  padding:0 25px;
 }
 
 
