--- a/homepage-main.css
+++ b/homepage-main.css
@@ -270,16 +270,21 @@ transition: all 2s ease;
 
 
 
-.footer-icon image {
+.footer-icon icon {
   text-align: center;
   margin:0 auto;
 }
 
-
+.icon img{
+ text-align: center;
+  margin:0 auto;
+}
 
 footer .container {
   height:auto;
 }
+
+
 
 
 .copy-right {
